# mls-rs

./: .gitignore  android_build_bindings.sh  build_ios.sh
headers_ios/: module.modulemap
headers_macos/: mls_rs_uniffiFFI.h
headers_sim/: mls_rs_uniffiFFI.h
mls-rs-crypto-cryptokit/: build.rs
mls-rs-uniffi/: Cargo.toml
mls-rs-uniffi/src/: config.rs  lib.rs
mls-rs-uniffi/src/config/: group_state.rs  key_package.rs
mls-rs-uniffi/uniffi-bindgen/: Cargo.toml
mls_rs_uniffi.xcframework/: Info.plist
mls_rs_uniffi.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
