[package]
name = "mls-rs-uniffi"
version = "0.12.0"
edition = "2021"
description = "An UniFFI-compatible implementation of Messaging Layer Security (RFC 9420)"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "e2ee", "uniffi"]
categories = ["cryptography"]
license = "Apache-2.0 OR MIT"
rust-version = "1.82.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "mls_rs_uniffi"

[dependencies]
async-trait = "0.1.77"
maybe-async = "0.2.10"
mls-rs = { version = "0.53.0", path = "../mls-rs" }
mls-rs-core = { version = "0.25.0", path = "../mls-rs-core" }
mls-rs-crypto-rustcrypto = { version = "0.20.0", path = "../mls-rs-crypto-rustcrypto" }
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "856f77b", version = "0.29.5" }
zeroize = "1"

[target.'cfg(mls_build_async)'.dependencies]
tokio = { version = "1.36.0", features = ["sync"] }

[dev-dependencies]
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs/", rev = "856f77b", version = "0.29.5", features = ["bindgen-tests"] }
uniffi_testing = { git = "https://github.com/mozilla/uniffi-rs/", rev = "856f77b", version = "0.29.5" }
anyhow = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mls_build_async)'] }
