[package]
name = "uniffi-bindgen"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "309762f", version = "0.31.0", features = ["cli"] }
